# repo-insight-bot

./: README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: __init__.py  rest_router.py  router.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: chatbot.py  extract.py
app/api/v1/websocket/: chatbot.py
app/core/: config.py
app/domain/schema/: chat_response.py  document.py  query.py  response_schema.py
app/domain/services/: chat_request_processor.py  document_processor.py  embedding_service.py  rabbitmq_service.py  response_generator.py  retriever.py  session_manager.py
app/infrastructure/chroma/: store.py
app/infrastructure/github/: github_repo_processor.py  pydriller_client.py
app/infrastructure/openai/: embedding_client.py
app/infrastructure/qdrant/: store.py
app/infrastructure/sentence_transformers/: embedding_client.py
app/utils/: helpers.py
app/websocket/: websocket_server.py
app/workers/: chat_worker.py
