[tool.poetry]
name = "repo-insight-bot"
version = "0.0.1"
description = "A bot for gathering insights from GitHub repositories."
authors = [
    "Logan Cardoso <logan.cc@outlook.com>"
]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
fastapi = ">=0.115.7,<0.116.0"
uvicorn = ">=0.34.0,<0.35.0"
openai = ">=1.60.1,<2.0.0"
pydriller = ">=2.7,<3.0"
chromadb = ">=0.6.3,<0.7.0"
scikit-learn = ">=1.6.1,<2.0.0"
pydantic = ">=2.10.6,<3.0.0"
pydantic-settings = "^2.7.1"
ollama = "^0.4.7"
sentence-transformers = "^3.4.0"
qdrant-client = "^1.13.2"
torch = "^2.5.1"
redis = "^5.2.1"
chardet = "^5.2.0"
pygithub = "^2.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
